Move to Common Tag Selection
Uses tag selection definitions and functions that are now homes in Core
so other services can take advantage of them.
